Prevent menu content overflow

--- a/_source/stylesheets/layout/_header.scss
+++ b/_source/stylesheets/layout/_header.scss
@@ -23,6 +23,8 @@
 	@include media('<desktop') {
 		width: 0;
 
+		overflow: hidden;
+
 		.menu-controller:checked & {
 			width: 90%;
 		}
